updated mock api classes as per new implementation