@@ -1,5 +1,6 @@
 package com.app.categorise.data.client.openai;
 
+import com.app.categorise.domain.model.ClassificationResult;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Component;
 
@@ -11,19 +12,35 @@ import java.util.Map;
 @Profile("dev")
 public class MockOpenAIClient implements OpenAIClient {
 
+    @Deprecated
     @Override
     public List<String> classifyTranscript(String transcript, String title, String description) {
-        System.out.println("Mocking OpenAI categorization");
-        return Arrays.asList("recipes", "meal prep", "budget cooking");
+        System.out.println("Mocking OpenAI categorization (DEPRECATED)");
+        return List.of();
+    }
+
+    @Deprecated
+    @Override
+    public Map<String, String> generateAliasesForCategories(List<String> categories) {
+        System.out.println("Mocking OpenAI category aliases (DEPRECATED)");
+        return Map.of();
     }
 
     @Override
-    public Map<String, String> generateAliasesForCategories(List<String> categories) {
-        System.out.println("Mocking OpenAI category aliases");
-        return Map.of(
-            "recipes", "cooking",
-            "meal prep", "meal planning",
-            "budget cooking", "affordable meals"
-        );
+    public ClassificationResult classifyAndSuggestAlias(String transcript, String title, String description, List<String> canonicalCategoryNames) {
+        System.out.println("--- MOCK classifyAndSuggestAlias ---");
+        System.out.println("Title: " + title);
+
+        if (title.toLowerCase().contains("recipe") || description.toLowerCase().contains("cooking")) {
+            System.out.println("Result: Matched 'Recipe'");
+            return new ClassificationResult("Recipe", "food", "Mock-Chef-Mode");
+        }
+        if (title.toLowerCase().contains("tech") || description.toLowerCase().contains("gadget")) {
+            System.out.println("Result: Matched 'tech'");
+            return new ClassificationResult(null, "tech", "Mock-Tech-Tok");
+        }
+
+        System.out.println("Result: Default match");
+        return new ClassificationResult(null, "general", "Mock-Cool-Vibes");
     }
 }
